--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!-- your css -->
   <link rel="stylesheet" href="CSS/style.css">
   <!-- your JavaScript file, something is missing -->
-  <script src="JS/script.js"></script>
+  <script src='JS/scripts.js' defer></script>
   <title>FakeCO</title>
 </head>
 <body class="light-theme">
